# orcaslicer-mcp

./: .gitignore  README.md  pyproject.toml  server.json
docs/: test-run-findings-2026-07-19.md
docs/superpowers/: 2026-07-19-e2e-verification-results.md
docs/superpowers/plans/: 2026-07-17-settings-knowledge-mvp.md  2026-07-19-e2e-verification.md  2026-07-20-fork-slice-breakdown.md  2026-07-20-slice-analytics-mcp.md
docs/superpowers/specs/: 2026-07-17-settings-knowledge-mvp-design.md  2026-07-20-orcaslicer-mcp-public-release-design.md  2026-07-20-slice-analytics-design.md
mcpb/: manifest.json
mcpb/server/: index.js
scripts/: extract_settings_schema.py
src/orcaslicer_mcp/: breakdown.py  client.py  config.py  errors.py  knowledge_index.py  models.py  notes.py  physics_check.py  placement.py  schema_extract.py  server.py  settings_schema.py
src/orcaslicer_mcp/data/: print_settings_schema.json
src/orcaslicer_mcp/knowledge/: interview.md
src/orcaslicer_mcp/knowledge/considerations/: dimensional-accuracy.md  large-nozzle.md  material-environment.md  small-features.md  speed-vs-quality.md  strength.md  surface-quality.md
src/orcaslicer_mcp/knowledge/failures/: elephant-foot.md  first-layer-adhesion.md  layer-splitting.md  (+6 more)
tests/: test_breakdown.py  test_client.py  test_client_config.py  test_client_events.py  test_client_slice.py  test_config.py  test_console_hide.py  test_errors.py  test_import.py  test_integration.py  test_kb_lint.py  test_knowledge_index.py  test_models.py  test_notes.py  test_physics_check.py  test_placement.py  test_scenarios.py  test_schema_extract.py  test_server.py  test_server_breakdown.py  test_server_compare.py  test_server_diagnose.py  test_server_intelligence.py  test_server_misc.py  test_server_mutations.py  test_server_objects.py  test_server_placement.py  test_server_settings.py  test_server_wait.py  test_settings_artifact.py  test_tool_annotations.py
(+4 files in other folders)
