[project]
name = "orcaslicer-mcp"
version = "0.1.0"
description = "MCP server that drives OrcaSlicer via its Remote API"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0", "httpx>=0.27", "websockets>=12"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
orcaslicer-mcp = "orcaslicer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
